# template-dash-multipage-app

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
pages/: blocks.py  dropdown.py  home.py
src/: app.py  index.py  wsgi.py
src/assets/: h-tag.css
src/pages/: blocks.py  button.py  dropdown.py  home.py  text_box.py
template_dash_multipage_app/: app.py  index.py
template_dash_multipage_app/pages/: button.py  text_box.py
tests/: test_template_dash_multipage_app.py
